k8s-ingress-controller/two-tier-application.yaml
#Creating deployment for app1

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1
  labels:
    type: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      type: app1
  template:
    metadata:
      labels:
        type: app1
    spec:
      containers:
      - name: nginx
        image: lakshmikanth333/app1:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    type: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx2
  labels: 
    type: app2
spec: 
  replicas: 2
  selector:
    matchLabels:
      type: app2
  template:
    metadata:
      labels:
        type: app2
    spec:
      containers:
      - name: nginx
        image: lakshmikanth333/app3:4.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    type: app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: lakshmikanth
spec:
  ingressClassName: alb
  rules:
  - host: "justin.wiki3.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app1
            port:
              number: 80
  - host: "lakshmikanth.wiki3.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app2
            port:
              number: 80
